# robot-ts

./: .gitignore  .gitmodules  .npmignore  .releaserc.json  CHANGELOG.md  README.md  eslint.config.js  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  main.yml  prebuild.yml  release.yml
cpp/: CMakeLists.txt
cpp/src/: KeyboardBinding.cpp  KeyboardBinding.h  MouseBinding.cpp  MouseBinding.h  ScreenBinding.cpp  ScreenBinding.h  main.cpp
native/: CMakeLists.txt
native/src/: Conversions.cpp  Conversions.h  ImageWrap.cpp  ImageWrap.h  SessionWrap.cpp  SessionWrap.h  addon.cpp
src/: buttons.ts  capabilities.ts  errors.ts  eventTap.ts  events.ts  geometry.ts  image.ts  index.ts  keyboard.ts  keys.ts  modifiers.ts  monitor.ts  mouse.ts  native.ts  pixel.ts  recorder.ts  screen.ts  scroll.ts  session.ts
src/internal/: timing.ts
test/unit/: facades.test.ts  mock-native.ts  recorder.test.ts
